优化redis存储浏览数模块